--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
             android:layout_height="110dp"
             android:src="@drawable/logo"
             app:civ_border_width="2dp"
-            app:civ_border_color="@color/white_color"
+            app:civ_border_color="@color/accent_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
