--- a/library-base/src/main/res/values/colors.xml
+++ b/library-base/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/Blue</color>
-<!--    <color name="colorPrimary">#6200EE</color>-->
+    <color name="colorPrimary">@color/accent_pale_blue</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#35464e</color>
 
     <color name="textColorPrimary">#616161</color>
-    <color name="viewBackground">@color/white_color</color>
+    <color name="viewBackground">@color/accent_white</color>
     <color name="windowBackground">@color/Grey100</color>
     <color name="line_divider">@color/Grey300</color>
     <color name="list_divider">@color/Grey400</color>
@@ -34,7 +33,7 @@
     <color name="color_about_tv">@color/Grey600</color>
     <color name="transparent_75">#ba000000</color>
     <color name="vertical_tab_layout_bg">@color/Grey100</color>
-    <color name="vertical_tab_layout_indicator_color">@color/white_color</color>
+    <color name="vertical_tab_layout_indicator_color">@color/accent_white</color>
     <color name="item_flow_layout_bg">@color/Grey200</color>
     <color name="arrow_color">@color/Grey700</color>
     <color name="sticky_header_bg">@color/Grey100</color>
@@ -82,7 +81,7 @@
     <color name="accent_indigo">#FF3F51B5</color>//靛蓝
     <color name="accent_purple">#ff9c27b0</color>//紫
     <color name="accent_brown">#FF795548</color>//灰色
-    <color name="accent_white">#ffffffff</color>
+    <color name="accent_white">#FFFFFF</color>
 
     <color name="dark_red">#ffc53929</color>
     <color name="dark_pink">#ffd66182</color>
