--- a/library-base/src/main/res/values/styles.xml
+++ b/library-base/src/main/res/values/styles.xml
@@ -2,9 +2,16 @@
 
     <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="textColorPrimary">@color/color_theme_text</item>
     </style>
+
+<!--    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+<!--        <item name="colorAccent">@color/colorAccent</item>-->
+<!--    </style>-->
 
     <!--启动页面，解决黑白屏的问题-->
     <style name="launchTheme">
@@ -26,10 +33,10 @@
     <style name="MyTabLayoutStyle" parent="Base.Widget.Design.TabLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/colorPrimary</item>
-        <item name="tabIndicatorColor">@color/white_color</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="tabIndicatorColor">@color/accent_white</item>
         <item name="tabIndicatorHeight">3dp</item>
-        <item name="tabSelectedTextColor">@color/white_color</item>
+        <item name="tabSelectedTextColor">@color/accent_white</item>
         <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
     </style>
 
