--- a/library-setting/src/main/res/layout/activity_settings.xml
+++ b/library-setting/src/main/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
         <LinearLayout
             android:id="@+id/ll_theme"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -44,10 +44,9 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/view_theme"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="15dp"
-                android:src="@color/Blue"/>
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:layout_marginEnd="15dp"/>
 
         </LinearLayout>
 
