--- a/library-system/src/main/res/layout/fragment_system.xml
+++ b/library-system/src/main/res/layout/fragment_system.xml
@@ -18,7 +18,7 @@
             app:tabGravity="center"
             app:tabMode="scrollable"
             app:tabTextAppearance="@style/MyTabTextAppearance"
-            app:tabTextColor="?android:textColorSecondary" />
+            app:tabTextColor="@color/Grey300" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
