--- a/library-wechat/src/main/res/layout/fragment_wechat.xml
+++ b/library-wechat/src/main/res/layout/fragment_wechat.xml
@@ -17,15 +17,15 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:tabGravity="center"
-            app:tabIndicatorColor="@color/white_color"
+            app:tabIndicatorColor="@color/accent_white"
             app:tabIndicatorHeight="3dp"
             app:tabMode="scrollable"
-            app:tabSelectedTextColor="@color/white_color"
+            app:tabSelectedTextColor="@color/accent_white"
             app:tabTextAppearance="@style/MyTabTextAppearance"
-            app:tabTextColor="?android:textColorSecondary" />
+            app:tabTextColor="@color/Grey300" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
